@@ -1,3 +1,8 @@
+2000-03-24  Nick Clifton  <nickc@cygnus.com>
+
+	* libc/sys/arm/syscalls.c: Fix compile time warnings.
+	(do_AngelSWI): Add "cc" to list o registers clobbered.
+
 Thu Mar 22 14:57:00 2000  Fernando Nasser <fnasser@redhat.com>
 
 	* libc/sys/arm/syscalls.c (do_AngelSWI): Prevent registers with valid
